Create dummy text for side bar and header

--- a/index.html
+++ b/index.html
@@ -7,6 +7,46 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
+
+    <!--Header, Sidebar, Main Content-->
+
+    <div class="container">
+        <div class="header">
+            <input type="text"> 
+            <div class="topright">
+                <p>Carter Jones</p>
+            </div>
+            <div class="bottomleft">
+                <p>Hi there, Carter Jones (@dudewherescarter)</p>
+            </div>
+            <div class="bottomright">
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
+            </div>
+        </div>
+
+        <div class="sidebar">
+            <p>Dashboard</p>
+            <div class="items toptag">
+                <a href="">Home</a>
+                <a href="">Profile</a>
+                <a href="">Messages</a>
+                <a href="">History</a>
+                <a href="">Tasks</a>
+                <a href="">Communities</a>
+            </div>
+            <div class="items bottomtag">
+                <a href="">Settings</a>
+                <a href="">Support</a>
+                <a href="">Privacy</a>
+            </div>
+        </div>
+
+        <div class="maincontent">
+
+        </div>
+    </div>
     
 </body>
 </html>
