Fill in more HTML dummy text for structure

--- a/index.html
+++ b/index.html
@@ -44,6 +44,68 @@
         </div>
 
         <div class="maincontent">
+            <p>Your Projects</p>
+            <div class="cardcontainer">
+                <div class="cardcontainer">
+                    <h6>Super Cool Project</h6>
+                    <p>Ipsa alias omnis iste magnam dicta dolorem incidunt itaque
+                       facilis nemo aperiam. Reprehenderit porro eos dignissimos
+                       beatae et voluptatem? Asperiores, sed praesentium!</p>
+                    <h6>Super Cool Project</h6>
+                    <p>Ipsa alias omnis iste magnam dicta dolorem incidunt itaque
+                       facilis nemo aperiam. Reprehenderit porro eos dignissimos
+                       beatae et voluptatem? Asperiores, sed praesentium!</p>
+                    <h6>Super Cool Project</h6>
+                    <p>Ipsa alias omnis iste magnam dicta dolorem incidunt itaque
+                       facilis nemo aperiam. Reprehenderit porro eos dignissimos
+                       beatae et voluptatem? Asperiores, sed praesentium!</p>
+                    <h6>Super Cool Project</h6>
+                    <p>Ipsa alias omnis iste magnam dicta dolorem incidunt itaque
+                       facilis nemo aperiam. Reprehenderit porro eos dignissimos
+                       beatae et voluptatem? Asperiores, sed praesentium!</p>
+                    <h6>Super Cool Project</h6>
+                    <p>Ipsa alias omnis iste magnam dicta dolorem incidunt itaque
+                       facilis nemo aperiam. Reprehenderit porro eos dignissimos
+                       beatae et voluptatem? Asperiores, sed praesentium!</p>
+                    <h6>Super Cool Project</h6>
+                    <p>Ipsa alias omnis iste magnam dicta dolorem incidunt itaque
+                       facilis nemo aperiam. Reprehenderit porro eos dignissimos
+                       beatae et voluptatem? Asperiores, sed praesentium!</p>
+                </div>
+                <div class="sidecards">
+                    <h6>Announcements</h6>
+                    <div class="maintenance">
+                        <h6>Site Maintenance</h6>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                           Dolores voluptatum ipsa cupiditate under.</p>
+                        <h6>Site Maintenance</h6>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                           Dolores voluptatum ipsa cupiditate under.</p>
+                        <h6>Site Maintenance</h6>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                           Dolores voluptatum ipsa cupiditate under.</p>
+                    </div>
+                    <h6>Trending</h6>
+                    <div class="trending">
+                        <div>
+                            <p>@Maria</p>
+                            <p>World Peace Builder</p>
+                        </div>
+                        <div>
+                            <p>@Maria</p>
+                            <p>World Peace Builder</p>
+                        </div>
+                        <div>
+                            <p>@Maria</p>
+                            <p>World Peace Builder</p>
+                        </div>
+                        <div>
+                            <p>@Maria</p>
+                            <p>World Peace Builder</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </div>
     </div>
