Adjust css styling and align content in all three containers

--- a/index.html
+++ b/index.html
@@ -8,103 +8,138 @@
 </head>
 <body>
 
-    <!--Header, Sidebar, Main Content-->
-
     <div class="container">
+
+        <!--Header Start-->
         <div class="header">
-            <input type="text"> 
-            <div class="topright">
-                <p>Carter Jones</p>
+            <div class="headertop">
+                <div class="searchbar">
+                    <img src="Images/magnify.png" class="search-icon" alt="Search Icon">
+                    <input type="text">
+                </div>
+                <div class="profile-bar">
+                    <img src="Images/bell-ring-outline.png" class="bell-icon" alt="Alert Bell">
+                    <img src="Images/account-circle-outline.png" class="admin-icon" alt="Admin Account Button">
+                    <h4>Carter Jones</h4>
+                </div>
             </div>
-            <div class="bottomleft">
-                <p>Hi there, Carter Jones (@dudewherescarter)</p>
-            </div>
-            <div class="bottomright">
-                <button>New</button>
-                <button>Upload</button>
-                <button>Share</button>
+            <div class="headerbottom">
+                <div class="profile">
+                    <img src="Images/account-circle-outline.png" class="profile-icon" alt="Admin Account Button">
+                    <div class="name-greeting">
+                        <div class="greeting">Hi there,</div>
+                        <div class="greeting">Carter Jones @dudewherescarter</div>
+                    </div>
+                </div>
+                <div class="make-post">
+                    <button class="head-button clickable">New</button>
+                    <button class="head-button clickable">Upload</button>
+                    <button class="head-button clickable">Share</button>
+                </div>
             </div>
         </div>
+        <!--Header End-->
 
+        <!--Sidebar Start-->
         <div class="sidebar">
             <p>Dashboard</p>
             <div class="items toptag">
-                <a href="">Home</a>
-                <a href="">Profile</a>
-                <a href="">Messages</a>
-                <a href="">History</a>
-                <a href="">Tasks</a>
-                <a href="">Communities</a>
+                    <a href="">Home</a>
+                    <a href="">Profile</a>
+                    <a href="">Messages</a>
+                    <a href="">History</a>
+                    <a href="">Tasks</a>
+                    <a href="">Communities</a>
             </div>
             <div class="items bottomtag">
-                <a href="">Settings</a>
-                <a href="">Support</a>
-                <a href="">Privacy</a>
+                    <a href="">Settings</a>
+                    <a href="">Support</a>
+                    <a href="">Privacy</a>
             </div>
         </div>
-
+        <!--Sidebar End-->
+        <!--Main Content Start-->
         <div class="maincontent">
-            <p>Your Projects</p>
-            <div class="cardcontainer">
-                <div class="cardcontainer">
-                    <h6>Super Cool Project</h6>
-                    <p>Ipsa alias omnis iste magnam dicta dolorem incidunt itaque
-                       facilis nemo aperiam. Reprehenderit porro eos dignissimos
-                       beatae et voluptatem? Asperiores, sed praesentium!</p>
-                    <h6>Super Cool Project</h6>
-                    <p>Ipsa alias omnis iste magnam dicta dolorem incidunt itaque
-                       facilis nemo aperiam. Reprehenderit porro eos dignissimos
-                       beatae et voluptatem? Asperiores, sed praesentium!</p>
-                    <h6>Super Cool Project</h6>
-                    <p>Ipsa alias omnis iste magnam dicta dolorem incidunt itaque
-                       facilis nemo aperiam. Reprehenderit porro eos dignissimos
-                       beatae et voluptatem? Asperiores, sed praesentium!</p>
-                    <h6>Super Cool Project</h6>
-                    <p>Ipsa alias omnis iste magnam dicta dolorem incidunt itaque
-                       facilis nemo aperiam. Reprehenderit porro eos dignissimos
-                       beatae et voluptatem? Asperiores, sed praesentium!</p>
-                    <h6>Super Cool Project</h6>
-                    <p>Ipsa alias omnis iste magnam dicta dolorem incidunt itaque
-                       facilis nemo aperiam. Reprehenderit porro eos dignissimos
-                       beatae et voluptatem? Asperiores, sed praesentium!</p>
-                    <h6>Super Cool Project</h6>
-                    <p>Ipsa alias omnis iste magnam dicta dolorem incidunt itaque
-                       facilis nemo aperiam. Reprehenderit porro eos dignissimos
-                       beatae et voluptatem? Asperiores, sed praesentium!</p>
-                </div>
-                <div class="sidecards">
-                    <h6>Announcements</h6>
-                    <div class="maintenance">
-                        <h6>Site Maintenance</h6>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                           Dolores voluptatum ipsa cupiditate under.</p>
-                        <h6>Site Maintenance</h6>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                           Dolores voluptatum ipsa cupiditate under.</p>
-                        <h6>Site Maintenance</h6>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                           Dolores voluptatum ipsa cupiditate under.</p>
-                    </div>
-                    <h6>Trending</h6>
-                    <div class="trending">
-                        <div>
-                            <p>@Maria</p>
-                            <p>World Peace Builder</p>
+                <div class="left-grid">
+                    <div class="your-project">Your Project</div>
+                    <div class="cards">
+                        <div class="left-card">
+                            <h6>Super Cool Project</h6>
+                            <p>Ipsa alias omnis iste magnam dicta dolorem incidunt itaque
+                               facilis nemo aperiam. Reprehenderit porro eos dignissimos
+                               beatae et voluptatem? Asperiores, sed praesentium!</p>
                         </div>
-                        <div>
-                            <p>@Maria</p>
-                            <p>World Peace Builder</p>
+                        <div class="left-card">
+                            <h6>Super Cool Project</h6>
+                            <p>Ipsa alias omnis iste magnam dicta dolorem incidunt itaque
+                               facilis nemo aperiam. Reprehenderit porro eos dignissimos
+                               beatae et voluptatem? Asperiores, sed praesentium!</p>
                         </div>
-                        <div>
-                            <p>@Maria</p>
-                            <p>World Peace Builder</p>
+                        <div class="left-card">
+                            <h6>Super Cool Project</h6>
+                            <p>Ipsa alias omnis iste magnam dicta dolorem incidunt itaque
+                               facilis nemo aperiam. Reprehenderit porro eos dignissimos
+                               beatae et voluptatem? Asperiores, sed praesentium!</p>
                         </div>
-                        <div>
-                            <p>@Maria</p>
-                            <p>World Peace Builder</p>
+                        <div class="left-card">
+                            <h6>Super Cool Project</h6>
+                            <p>Ipsa alias omnis iste magnam dicta dolorem incidunt itaque
+                               facilis nemo aperiam. Reprehenderit porro eos dignissimos
+                               beatae et voluptatem? Asperiores, sed praesentium!</p>
+                        </div>
+                        <div class="left-card">
+                            <h6>Super Cool Project</h6>
+                            <p>Ipsa alias omnis iste magnam dicta dolorem incidunt itaque
+                               facilis nemo aperiam. Reprehenderit porro eos dignissimos
+                               beatae et voluptatem? Asperiores, sed praesentium!</p>
+                        </div>
+                        <div class="left-card">
+                            <h6>Super Cool Project</h6>
+                            <p>Ipsa alias omnis iste magnam dicta dolorem incidunt itaque
+                               facilis nemo aperiam. Reprehenderit porro eos dignissimos
+                               beatae et voluptatem? Asperiores, sed praesentium!</p>
                         </div>
                     </div>
                 </div>
+                <div class="right-grid">
+                    <div class="announcement-section">
+                        <div class="announcement-heading">Announcements</div>
+                        <div class="announcement-container">
+                            <div class="right-card announcements">
+                                <div class="announcement-heading">Site Maintenance</div>
+                                <div class="announcement-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                    Dolores voluptatum ipsa cupiditate under</div>
+                                <div class="announcement-heading">Community Share Day</div>
+                                <div class="announcement-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                    Dolores voluptatum ipsa cupiditate under</div>
+                                <div class="announcement-heading">Updated Privacy Policy</div>
+                                <div class="announcement-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                    Dolores voluptatum ipsa cupiditate under</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="trending-section">
+                        <div class="trending-header">Trending</div>
+                        <div class="trending-container">
+                            <div class="trending-profile">
+                                <p>@Maria</p>
+                                <p>World Peace Builder</p>
+                            </div>
+                            <div class="trending-profile">
+                                <p>@Maria</p>
+                                <p>World Peace Builder</p>
+                            </div>
+                            <div class="trending-profile">
+                                <p>@Maria</p>
+                                <p>World Peace Builder</p>
+                            </div>
+                            <div class="trending-profile">
+                                <p>@Maria</p>
+                                <p>World Peace Builder</p>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
             </div>
 
         </div>
